argocd/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuh
  namespace: dev
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: tuh
  template:
    metadata:
      labels:
        app: tuh
    spec:
      containers:
        - name: tuh
          image: srachdi/tuh:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
              name: web
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: web
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: web
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1001
        runAsGroup: 1001
        runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: tuh
  namespace: dev
spec:
  selector:
    app: tuh
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tuh
  namespace: dev
spec:
  ingressClassName: traefik
  rules:
    - host: tuh.192.168.56.110.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tuh
                port:
                  number: 80
